--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-transition-group": "^4.4.5",
     "react-type-animation": "^2.1.2",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "scrollreveal": "^4.0.9"
   }
 }
