--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
-    "@vercel/analytics": "^0.1.8",
-    "axios": "^1.2.2",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
-    "mongodb": "^4.13.0",
-    "next": "13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
+    "@vercel/analytics": "^1.3.1",
+    "axios": "^1.7.7",
+    "eslint": "^8.41.0",
+    "mongodb": "^5.6.0",
+    "next": "^15.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^4.8.0",
     "react-transition-group": "^4.4.5",
     "react-type-animation": "^2.1.2",
-    "sass": "^1.57.1",
+    "sass": "^1.56.0",
     "scrollreveal": "^4.0.9"
+  },
+  "devDependencies": {
+    "@types/node": "^22.8.4",
+    "@types/react": "^18.3.12",
+    "eslint-config-next": "^15.0.2",
+    "typescript": "^5.6.3"
   }
 }
