--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,15 +19,24 @@
     "plugins": [
       {
         "name": "next/tsconfig"
+      },
+      {
+        "name": "next"
       }
     ],
-    "types": ["node"],
+    "types": [
+      "node"
+    ],
     "strictNullChecks": true,
     "target": "ES2020",
-    "baseUrl": ".", 
+    "baseUrl": ".",
     "paths": {
-      "@components/*": ["components/*"], 
-      "@utils/*": ["utils/*"]
+      "@components/*": [
+        "components/*"
+      ],
+      "@utils/*": [
+        "utils/*"
+      ]
     }
   },
   "include": [
