--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/node": "^22.8.4",
     "@types/react": "^18.3.12",
+    "@types/scrollreveal": "^0.0.11",
     "eslint-config-next": "^15.0.2",
     "typescript": "^5.6.3"
   }
